upgrade clojure-maven-plugin