@@ -68,8 +68,7 @@
       <plugin>
         <groupId>com.theoryinpractise</groupId>
         <artifactId>clojure-maven-plugin</artifactId>
-        <version>1.3.7</version>
-        <extensions>true</extensions>
+        <version>1.3.8</version>
         <configuration>
           <!-- <script>script/server</script> -->
           <namespaces>
@@ -77,8 +76,7 @@
             <namespace>jiksnu.server.tigase.plugin</namespace>
           </namespaces>
           <vmargs>-server -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=128m</vmargs>
-          <!-- <vmargs>-agentlib:jdwp=transport=dt_socket,address=8021,server=y,suspend=n -server -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=128m</vmargs> -->
-          <!-- <compileDeclaredNamespaceOnly>true</compileDeclaredNamespaceOnly> -->
+          <compileDeclaredNamespaceOnly>true</compileDeclaredNamespaceOnly>
           <!-- <testDeclaredNamespaceOnly>true</testDeclaredNamespaceOnly> -->
           <!-- <warnOnReflection>true</warnOnReflection> -->
         </configuration>
